# ansible-mariadb-galera-cluster

./: .ansible-lint  .ansible-lint-ignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  playbook.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.in  requirements.txt  requirements.yml
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/workflows/: default.yml  release-drafter.yml  release-galaxy.yml
Vagrant/: bootstrap.yml
defaults/: main.yml
files/: clustercheck
handlers/: main.yml
meta/: .galaxy_install_info  main.yml
molecule/centos10/: molecule.yml
molecule/centos7/: molecule.yml
molecule/centos8/: molecule.yml
molecule/centos9/: molecule.yml
molecule/debian10/: molecule.yml
molecule/debian11/: molecule.yml
molecule/debian12/: molecule.yml  verify.yml
molecule/debian13/: molecule.yml
molecule/debian9/: molecule.yml
molecule/fedora/: molecule.yml
tasks/: cacti.yml  checkmk.yml  checks.yml  cluster_check.yml  configure_root_access.yml  custom_datadir_populate.yml  debian.yml  galera_monitoring.yml  main.yml  manage_node_state.yml  mariadb_packages_install.yml  max-open-files.yml  mysql_databases.yml  mysql_root_pw.yml  mysql_users.yml  oom-score-adjust.yml  redhat.yml  set_facts.yml  setup_cluster.yml  system_performance_tuning.yml  timeout-start-sec.yml
templates/root/: my.cnf.j2
vars/: Debian.yml  RedHat.yml  Ubuntu-20.yml  almalinux-9.yml  centos-10.yml  centos-8.yml  centos-9.yml  debian-11.yml  debian-12.yml  debian-13.yml  debian.yml  fedora.yml  main.yml  redhat-8.yml  redhat-9.yml  redhat.yml  rocky-8.yml  rocky-9.yml  ubuntu-20.yml  ubuntu-22.yml  ubuntu-24.yml
(+29 files in other folders)
